fixed visibility errors

--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -85,7 +85,8 @@ button:hover {
 
 #task-tab,
 #question-tab,
-#progress-container {
+#progress-container,
+#buttons-container {
 	opacity: 0;
 	pointer-events: none;
 }
@@ -105,7 +106,8 @@ button:hover {
 
 #task-tab.show-component,
 #question-tab.show-component,
-#progress-container.show-component {
+#progress-container.show-component,
+#buttons-container.show-component {
 	opacity: 1;
 	pointer-events: auto;
 }
